--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>News homepage</title>
   </head>
   <body
-    class="lllllllllllllll mx-5 my-10 flex flex-col items-center justify-center bg-white font-main xl:mx-40"
+    class="font-main mx-5 my-10 flex flex-col items-center justify-center bg-white xl:mx-40"
   >
     <header class="flex w-full items-center justify-between">
       <svg width="65" height="40" xmlns="http://www.w3.org/2000/svg">
@@ -34,22 +34,22 @@
         </g>
       </svg>
       <nav
-        class="right-0 top-0 flex flex-col gap-5 bg-white font-medium text-title transition duration-500 max-md:absolute max-md:h-full max-md:w-4/6 max-md:translate-x-full max-md:py-44 max-md:pl-5 max-md:opacity-0 max-md:shadow-inner md:flex-row md:gap-9 md:text-primary"
+        class="text-title md:text-primary right-0 top-0 flex flex-col gap-5 bg-white font-medium transition duration-500 max-md:absolute max-md:h-full max-md:w-4/6 max-md:translate-x-full max-md:py-44 max-md:pl-5 max-md:opacity-0 max-md:shadow-inner md:flex-row md:gap-9"
       >
-        <a class="transition duration-500 hover:text-btn" href="index.html"
+        <a class="hover:text-btn transition duration-500" href="index.html"
           >Home</a
         >
-        <a class="transition duration-500 hover:text-btn" href="#">New</a>
-        <a class="transition duration-500 hover:text-btn" href="#">Popular</a>
-        <a class="transition duration-500 hover:text-btn" href="#">Trending</a>
-        <a class="transition duration-500 hover:text-btn" href="#"
+        <a class="hover:text-btn transition duration-500" href="#">New</a>
+        <a class="hover:text-btn transition duration-500" href="#">Popular</a>
+        <a class="hover:text-btn transition duration-500" href="#">Trending</a>
+        <a class="hover:text-btn transition duration-500" href="#"
           >Categories</a
         >
       </nav>
     </header>
     <main>
       <section
-        class="mt-10 grid gap-20 xl:mt-12 xl:grid-cols-[70%_30%] xl:gap-0"
+        class="mt-10 grid gap-20 xl:mt-12 xl:grid-cols-[69%_31%] xl:gap-0"
       >
         <div class="xl:mr-8">
           <picture>
@@ -59,18 +59,18 @@
             />
             <img src="./assets/images/image-web-3-desktop.jpg" alt="" />
           </picture>
-          <div class="my-8 grid xl:my-10 xl:grid-cols-2">
-            <h1 class="w-11/12 text-5xl font-black text-title xl:text-6xl">
+          <div class="my-8 grid xl:my-16 xl:grid-cols-2">
+            <h1 class="text-title w-11/12 text-5xl font-black xl:text-6xl">
               The Bright Future of Web 3.0?
             </h1>
             <div>
-              <p class="mb-8 mt-5 font-medium leading-8 text-primary xl:mb-10">
+              <p class="text-primary mb-8 mt-5 font-medium leading-8 xl:mb-10">
                 We dive into the next evolution of the web that claims to put
                 the power of the platforms back into the hands of the people.
                 But is it really fulfilling its promise?
               </p>
               <button
-                class="border-none bg-btn px-10 pb-3 pt-4 font-semibold uppercase tracking-[.25em] text-white shadow-xl transition duration-300 hover:bg-title"
+                class="bg-btn hover:bg-title border-none px-10 pb-3 pt-4 font-semibold uppercase tracking-[.25em] text-white shadow-xl transition duration-300"
               >
                 Read more
               </button>
@@ -78,35 +78,35 @@
           </div>
         </div>
         <div class="bg-title px-8 py-10">
-          <h2 class="mb-10 text-5xl font-semibold text-titlesecondary">New</h2>
-          <div class="mb-8 border-b border-secondary/50">
+          <h2 class="text-titlesecondary mb-10 text-5xl font-semibold">New</h2>
+          <div class="border-secondary/50 mb-8 border-b">
             <h3
-              class="mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300 hover:text-titlesecondary"
+              class="hover:text-titlesecondary mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300"
             >
               Hydrogen VS Electric Cars
             </h3>
-            <p class="mb-8 leading-8 text-secondary">
+            <p class="text-secondary mb-8 leading-8">
               Will hydrogen-fueled cars ever catch up to EVs?
             </p>
           </div>
-          <div class="mb-8 border-b border-secondary/50">
+          <div class="border-secondary/50 mb-8 border-b">
             <h3
-              class="mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300 hover:text-titlesecondary"
+              class="hover:text-titlesecondary mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300"
             >
               The Downsides of AI Artistry
             </h3>
-            <p class="mb-8 leading-8 text-secondary">
+            <p class="text-secondary mb-8 leading-8">
               What are the possible adverse effects of on-demand AI image
               generation?
             </p>
           </div>
           <div>
             <h3
-              class="mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300 hover:text-titlesecondary"
+              class="hover:text-titlesecondary mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300"
             >
               Is VC Funding Drying Up?
             </h3>
-            <p class="leading-8 text-secondary">
+            <p class="text-secondary leading-8">
               Private funding by VC firms is down 50% YOY. We take a look at
               what that means.
             </p>
@@ -117,13 +117,13 @@
         <div class="flex gap-5">
           <img class="xl:w-2/5" src="./assets/images/image-retro-pcs.jpg" />
           <div>
-            <span class="text-4xl font-bold text-secondary">01</span>
+            <span class="text-secondary text-4xl font-bold">01</span>
             <h3
-              class="my-3 cursor-pointer text-xl font-black text-title transition duration-300 hover:text-btn"
+              class="text-title hover:text-btn my-3 cursor-pointer text-xl font-black transition duration-300"
             >
               Reviving Retro PCs
             </h3>
-            <p class="leading-7 text-primary">
+            <p class="text-primary leading-7">
               What happens when old PCs are given modern upgrades?
             </p>
           </div>
@@ -131,13 +131,13 @@
         <div class="flex gap-5">
           <img class="xl:w-2/5" src="./assets/images/image-top-laptops.jpg" />
           <div>
-            <span class="text-4xl font-bold text-secondary">02</span>
+            <span class="text-secondary text-4xl font-bold">02</span>
             <h3
-              class="my-3 cursor-pointer text-xl font-black text-title transition duration-300 hover:text-btn"
+              class="text-title hover:text-btn my-3 cursor-pointer text-xl font-black transition duration-300"
             >
               Top 10 Laptops of 2022
             </h3>
-            <p class="leading-7 text-primary">
+            <p class="text-primary leading-7">
               Our best picks for various needs and budgets.
             </p>
           </div>
@@ -145,13 +145,13 @@
         <div class="flex gap-5">
           <img class="xl:w-2/5" src="./assets/images/image-gaming-growth.jpg" />
           <div>
-            <span class="text-4xl font-bold text-secondary">03</span>
+            <span class="text-secondary text-4xl font-bold">03</span>
             <h3
-              class="my-3 cursor-pointer text-xl font-black text-title transition duration-300 hover:text-btn"
+              class="text-title hover:text-btn my-3 cursor-pointer text-xl font-black transition duration-300"
             >
               The Growth of Gaming
             </h3>
-            <p class="leading-7 text-primary">
+            <p class="text-primary leading-7">
               How the pandemic has sparked fresh opportunities.
             </p>
           </div>
