error class correction

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <link href="./src/css/output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
     <title>News homepage</title>
   </head>
   <body
@@ -36,13 +36,17 @@
       <nav
         class="text-title md:text-primary right-0 top-0 flex flex-col gap-5 bg-white font-medium transition duration-500 max-md:absolute max-md:h-full max-md:w-4/6 max-md:translate-x-full max-md:py-44 max-md:pl-5 max-md:opacity-0 max-md:shadow-inner md:flex-row md:gap-9"
       >
-        <a class="hover:text-btn transition duration-500" href="index.html"
+        <a class="hover:text-success transition duration-500" href="index.html"
           >Home</a
         >
-        <a class="hover:text-btn transition duration-500" href="#">New</a>
-        <a class="hover:text-btn transition duration-500" href="#">Popular</a>
-        <a class="hover:text-btn transition duration-500" href="#">Trending</a>
-        <a class="hover:text-btn transition duration-500" href="#"
+        <a class="hover:text-success transition duration-500" href="#">New</a>
+        <a class="hover:text-success transition duration-500" href="#"
+          >Popular</a
+        >
+        <a class="hover:text-success transition duration-500" href="#"
+          >Trending</a
+        >
+        <a class="hover:text-success transition duration-500" href="#"
           >Categories</a
         >
       </nav>
@@ -70,7 +74,7 @@
                 But is it really fulfilling its promise?
               </p>
               <button
-                class="bg-btn hover:bg-title border-none px-10 pb-3 pt-4 font-semibold uppercase tracking-[.25em] text-white shadow-xl transition duration-300"
+                class="bg-success hover:bg-title border-none px-10 pb-3 pt-4 font-semibold uppercase tracking-[.25em] text-white shadow-xl transition duration-300"
               >
                 Read more
               </button>
@@ -115,11 +119,14 @@
       </section>
       <section class="mt-20 flex gap-10 max-xl:flex-col">
         <div class="flex gap-5">
-          <img class="xl:w-2/5" src="./assets/images/image-retro-pcs.jpg" />
+          <img
+            class="shadow-2xl xl:w-2/5"
+            src="./assets/images/image-retro-pcs.jpg"
+          />
           <div>
             <span class="text-secondary text-4xl font-bold">01</span>
             <h3
-              class="text-title hover:text-btn my-3 cursor-pointer text-xl font-black transition duration-300"
+              class="text-title hover:text-success my-3 cursor-pointer text-xl font-black transition duration-300"
             >
               Reviving Retro PCs
             </h3>
@@ -129,11 +136,14 @@
           </div>
         </div>
         <div class="flex gap-5">
-          <img class="xl:w-2/5" src="./assets/images/image-top-laptops.jpg" />
+          <img
+            class="shadow-2xl xl:w-2/5"
+            src="./assets/images/image-top-laptops.jpg"
+          />
           <div>
             <span class="text-secondary text-4xl font-bold">02</span>
             <h3
-              class="text-title hover:text-btn my-3 cursor-pointer text-xl font-black transition duration-300"
+              class="text-title hover:text-success my-3 cursor-pointer text-xl font-black transition duration-300"
             >
               Top 10 Laptops of 2022
             </h3>
@@ -143,11 +153,14 @@
           </div>
         </div>
         <div class="flex gap-5">
-          <img class="xl:w-2/5" src="./assets/images/image-gaming-growth.jpg" />
+          <img
+            class="shadow-2xl xl:w-2/5"
+            src="./assets/images/image-gaming-growth.jpg"
+          />
           <div>
             <span class="text-secondary text-4xl font-bold">03</span>
             <h3
-              class="text-title hover:text-btn my-3 cursor-pointer text-xl font-black transition duration-300"
+              class="text-title hover:text-success my-3 cursor-pointer text-xl font-black transition duration-300"
             >
               The Growth of Gaming
             </h3>
