add alt and meta

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore the latest news and trends in technology, business, and more on our homepage. Stay informed with our curated articles and insightful analysis."
+    />
+    <meta
+      name="keywords"
+      content="technology news, business news, web 3.0, AI, VC funding, retro PCs, laptops, gaming, pandemic, trends"
+    />
     <link
       rel="icon"
       type="image/png"
@@ -61,7 +69,10 @@
               srcset="./assets/images/image-web-3-mobile.jpg"
               media="(orientation: portrait)"
             />
-            <img src="./assets/images/image-web-3-desktop.jpg" alt="" />
+            <img
+              src="./assets/images/image-web-3-desktop.jpg"
+              alt="The Bright Future of Web 3.0?"
+            />
           </picture>
           <div class="my-8 grid xl:my-16 xl:grid-cols-2">
             <h1 class="text-title w-11/12 text-5xl font-black xl:text-6xl">
@@ -122,6 +133,7 @@
           <img
             class="shadow-2xl xl:w-2/5"
             src="./assets/images/image-retro-pcs.jpg"
+            alt="A retro-style personal computer with modern upgrades."
           />
           <div>
             <span class="text-secondary text-4xl font-bold">01</span>
@@ -139,6 +151,7 @@
           <img
             class="shadow-2xl xl:w-2/5"
             src="./assets/images/image-top-laptops.jpg"
+            alt="A group of laptops arranged neatly."
           />
           <div>
             <span class="text-secondary text-4xl font-bold">02</span>
@@ -156,6 +169,7 @@
           <img
             class="shadow-2xl xl:w-2/5"
             src="./assets/images/image-gaming-growth.jpg"
+            alt="White gaming controller"
           />
           <div>
             <span class="text-secondary text-4xl font-bold">03</span>
