--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             />
           </picture>
           <div class="my-8 grid xl:my-16 xl:grid-cols-2">
-            <h1 class="text-title w-11/12 text-5xl font-black xl:text-6xl">
+            <h1
+              class="text-title w-11/12 self-center text-5xl font-black xl:text-6xl"
+            >
               The Bright Future of Web 3.0?
             </h1>
             <div>
