--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               alt="The Bright Future of Web 3.0?"
             />
           </picture>
-          <div class="my-8 grid xl:my-16 xl:grid-cols-2">
+          <div class="my-8 grid xl:my-10 xl:grid-cols-2">
             <h1
               class="text-title w-11/12 self-center text-5xl font-black xl:text-6xl"
             >
@@ -94,7 +94,7 @@
             </div>
           </div>
         </div>
-        <div class="bg-title px-8 py-10">
+        <div class="bg-title p-7">
           <h2 class="text-titlesecondary mb-10 text-5xl font-semibold">New</h2>
           <div class="border-secondary/50 mb-8 border-b">
             <h3
@@ -130,10 +130,10 @@
           </div>
         </div>
       </section>
-      <section class="mt-20 flex gap-10 max-xl:flex-col">
+      <section class="mt-20 flex gap-10 max-xl:flex-col xl:gap-5">
         <div class="flex gap-5">
           <img
-            class="shadow-2xl xl:w-2/5"
+            class="size-2/4 shadow-2xl md:size-1/4 xl:size-3/4"
             src="./assets/images/image-retro-pcs.jpg"
             alt="A retro-style personal computer with modern upgrades."
           />
@@ -151,7 +151,7 @@
         </div>
         <div class="flex gap-5">
           <img
-            class="shadow-2xl xl:w-2/5"
+            class="size-2/4 shadow-2xl md:size-1/4 xl:size-3/4"
             src="./assets/images/image-top-laptops.jpg"
             alt="A group of laptops arranged neatly."
           />
@@ -169,7 +169,7 @@
         </div>
         <div class="flex gap-5">
           <img
-            class="shadow-2xl xl:w-2/5"
+            class="size-2/4 shadow-2xl md:size-1/4 xl:size-3/4"
             src="./assets/images/image-gaming-growth.jpg"
             alt="White gaming controller"
           />
