tailwind order class

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>News homepage</title>
   </head>
   <body
-    class="font-main mx-5 my-10 flex flex-col items-center justify-center bg-white xl:mx-40"
+    class="mx-5 my-10 flex flex-col items-center justify-center bg-white font-main xl:mx-40"
   >
     <header class="flex w-full items-center justify-between">
       <svg width="65" height="40" xmlns="http://www.w3.org/2000/svg">
@@ -42,19 +42,19 @@
         </g>
       </svg>
       <nav
-        class="text-title md:text-primary right-0 top-0 flex flex-col gap-5 bg-white font-medium transition duration-500 max-md:absolute max-md:h-full max-md:w-4/6 max-md:translate-x-full max-md:py-44 max-md:pl-5 max-md:opacity-0 max-md:shadow-inner md:flex-row md:gap-9"
+        class="right-0 top-0 flex flex-col gap-5 bg-white font-medium text-title transition duration-500 max-md:absolute max-md:h-full max-md:w-4/6 max-md:translate-x-full max-md:py-44 max-md:pl-5 max-md:opacity-0 max-md:shadow-inner md:flex-row md:gap-9 md:text-primary"
       >
-        <a class="hover:text-success transition duration-500" href="index.html"
+        <a class="transition duration-500 hover:text-success" href="index.html"
           >Home</a
         >
-        <a class="hover:text-success transition duration-500" href="#">New</a>
-        <a class="hover:text-success transition duration-500" href="#"
+        <a class="transition duration-500 hover:text-success" href="#">New</a>
+        <a class="transition duration-500 hover:text-success" href="#"
           >Popular</a
         >
-        <a class="hover:text-success transition duration-500" href="#"
+        <a class="transition duration-500 hover:text-success" href="#"
           >Trending</a
         >
-        <a class="hover:text-success transition duration-500" href="#"
+        <a class="transition duration-500 hover:text-success" href="#"
           >Categories</a
         >
       </nav>
@@ -76,18 +76,18 @@
           </picture>
           <div class="my-8 grid xl:my-10 xl:grid-cols-2">
             <h1
-              class="text-title w-11/12 self-center text-5xl font-black xl:text-6xl"
+              class="w-11/12 self-center text-5xl font-black text-title xl:text-6xl"
             >
               The Bright Future of Web 3.0?
             </h1>
             <div>
-              <p class="text-primary mb-8 mt-5 font-medium leading-8 xl:mb-10">
+              <p class="mb-8 mt-5 font-medium leading-8 text-primary xl:mb-10">
                 We dive into the next evolution of the web that claims to put
                 the power of the platforms back into the hands of the people.
                 But is it really fulfilling its promise?
               </p>
               <button
-                class="bg-success hover:bg-title border-none px-10 pb-3 pt-4 font-semibold uppercase tracking-[.25em] text-white shadow-xl transition duration-300"
+                class="border-none bg-success px-10 pb-3 pt-4 font-semibold uppercase tracking-[.25em] text-white shadow-xl transition duration-300 hover:bg-title"
               >
                 Read more
               </button>
@@ -95,35 +95,35 @@
           </div>
         </div>
         <div class="bg-title p-7">
-          <h2 class="text-titlesecondary mb-10 text-5xl font-semibold">New</h2>
-          <div class="border-secondary/50 mb-8 border-b">
+          <h2 class="mb-10 text-5xl font-semibold text-titlesecondary">New</h2>
+          <div class="mb-8 border-b border-secondary/50">
             <h3
-              class="hover:text-titlesecondary mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300"
+              class="mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300 hover:text-titlesecondary"
             >
               Hydrogen VS Electric Cars
             </h3>
-            <p class="text-secondary mb-8 leading-8">
+            <p class="mb-8 leading-8 text-secondary">
               Will hydrogen-fueled cars ever catch up to EVs?
             </p>
           </div>
-          <div class="border-secondary/50 mb-8 border-b">
+          <div class="mb-8 border-b border-secondary/50">
             <h3
-              class="hover:text-titlesecondary mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300"
+              class="mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300 hover:text-titlesecondary"
             >
               The Downsides of AI Artistry
             </h3>
-            <p class="text-secondary mb-8 leading-8">
+            <p class="mb-8 leading-8 text-secondary">
               What are the possible adverse effects of on-demand AI image
               generation?
             </p>
           </div>
           <div>
             <h3
-              class="hover:text-titlesecondary mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300"
+              class="mb-4 cursor-pointer text-xl font-extrabold text-white transition duration-300 hover:text-titlesecondary"
             >
               Is VC Funding Drying Up?
             </h3>
-            <p class="text-secondary leading-8">
+            <p class="leading-8 text-secondary">
               Private funding by VC firms is down 50% YOY. We take a look at
               what that means.
             </p>
@@ -138,13 +138,13 @@
             alt="A retro-style personal computer with modern upgrades."
           />
           <div>
-            <span class="text-secondary text-4xl font-bold">01</span>
+            <span class="text-4xl font-bold text-secondary">01</span>
             <h3
-              class="text-title hover:text-success my-3 cursor-pointer text-xl font-black transition duration-300"
+              class="my-3 cursor-pointer text-xl font-black text-title transition duration-300 hover:text-success"
             >
               Reviving Retro PCs
             </h3>
-            <p class="text-primary leading-7">
+            <p class="leading-7 text-primary">
               What happens when old PCs are given modern upgrades?
             </p>
           </div>
@@ -156,13 +156,13 @@
             alt="A group of laptops arranged neatly."
           />
           <div>
-            <span class="text-secondary text-4xl font-bold">02</span>
+            <span class="text-4xl font-bold text-secondary">02</span>
             <h3
-              class="text-title hover:text-success my-3 cursor-pointer text-xl font-black transition duration-300"
+              class="my-3 cursor-pointer text-xl font-black text-title transition duration-300 hover:text-success"
             >
               Top 10 Laptops of 2022
             </h3>
-            <p class="text-primary leading-7">
+            <p class="leading-7 text-primary">
               Our best picks for various needs and budgets.
             </p>
           </div>
@@ -174,13 +174,13 @@
             alt="White gaming controller"
           />
           <div>
-            <span class="text-secondary text-4xl font-bold">03</span>
+            <span class="text-4xl font-bold text-secondary">03</span>
             <h3
-              class="text-title hover:text-success my-3 cursor-pointer text-xl font-black transition duration-300"
+              class="my-3 cursor-pointer text-xl font-black text-title transition duration-300 hover:text-success"
             >
               The Growth of Gaming
             </h3>
-            <p class="text-primary leading-7">
+            <p class="leading-7 text-primary">
               How the pandemic has sparked fresh opportunities.
             </p>
           </div>
